crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_execution_outcome_success.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 862
expression: outcome
---
route_id: route-1
success: true
latency_ms: 150
prompt_tokens: 100
completion_tokens: 50
total_tokens: 150
error_class: ~
status_code: 200
timestamp: "[timestamp]"
used_fallback: false
original_route_id: ~
