crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_fallback_config_defaults.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 849
expression: "FallbackConfig::default()"
---
FallbackConfig {
    max_fallbacks: 5,
    min_fallbacks: 2,
    enable_provider_diversity: true,
    prefer_diverse_providers: true,
}
