crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_filter_result_accepted.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 792
expression: "FilterResult::Accepted"
---
Accepted
