crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_filter_result_rejected_capability.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 798
expression: "FilterResult::Rejected\n{ reason: \"capability mismatch: missing vision\".to_string(), }"
---
Rejected {
    reason: "capability mismatch: missing vision",
}
