crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_filter_result_rejected_provider.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 815
expression: "FilterResult::Rejected\n{ reason: \"provider disabled: blocked-provider\".to_string(), }"
---
Rejected {
    reason: "provider disabled: blocked-provider",
}
