crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_format_detection_generic.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 239
expression: "FormatDetector::detect(&request)"
---
Generic
