crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_health_status_degraded.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 833
expression: "HealthStatus::Degraded"
---
Degraded
